fix(footnotes): add spacing to footnote references

--- a/src/assets/styles/layout/footnotes.css
+++ b/src/assets/styles/layout/footnotes.css
@@ -2,6 +2,7 @@
 .footnote-ref a {
   color: var(--color-accent);
   font-weight: var(--font-weight-light);
+  padding: 0.1em;
 }
 
 .footnote-bracket {
